# resyctl

./: .gitignore  CLI_SPEC.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: api.rs  cli.rs  config.rs  error.rs  main.rs  models.rs  output.rs  state.rs  types.rs  util.rs
src/commands/: auth.rs  availability.rs  book.rs  cancel.rs  config_cmd.rs  mod.rs  payment_methods.rs  quote.rs  reservations.rs  search.rs  venue.rs
tests/fixtures/: book_response.json  cancel_response.json  details_commit0_response.json  details_commit1_response.json  find_response.json  not_found_error.json  reservations_response.json  search_response.json  venue_response.json
