[package]
name = "resyctl"
version = "0.2.1"
edition = "2024"
description = "Automation-friendly CLI for Resy with JSON-first output"
license = "MIT"
repository = "https://github.com/evanpurkhiser/resyctl"
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "brotli", "form", "query", "rustls"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
thiserror = "2.0"
url = "2"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
httpmock = "0.8"
